# cat_BTC

./: .gitignore  .gitmodules  Cargo.toml  README.md
bitcoin-vault/: Cargo.toml
bitcoin-vault/src/: lib.rs  vault.rs
cli/: Cargo.toml
cli-simple/: Cargo.toml
cli-simple/src/: main.rs
cli/src/: config.rs  main.rs
cli/src/commands/: bridge.rs  config.rs  defi.rs  mod.rs  rollup.rs  status.rs  vault.rs
mini-rollup/: Cargo.toml
mini-rollup/src/: batch.rs  lib.rs
shared/: Cargo.toml
shared/src/: bridge.rs  constants.rs  errors.rs  lib.rs  state.rs  types.rs
