[package]
name = "purrfect-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "purrfect"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"