[package]
name = "purrfect-defi-hub"
version.workspace = true
edition.workspace = true

[[bin]]
name = "purrfect"
path = "src/main.rs"

[dependencies]
# 워크스페이스 모듈들
shared = { path = "../shared" }
bitcoin-vault = { path = "../bitcoin-vault" }
mini-rollup = { path = "../mini-rollup" }

# CLI & 로깅
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# 비동기
tokio.workspace = true

# 유틸리티
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Bitcoin
bitcoin.workspace = true
bitcoincore-rpc.workspace = true

# 설정
toml = "0.8"